2004/06/02 Matthew Zimmerman <zubov@users.sourceforge.net>
* Updated LinkedRemoteFileTest to include a test for remerge()
* Rewrote remerge() and parts of filesystem that used isDeleted()
  Queued Renames/Deletes are no longer kept in the filesystem but
  in a Hashmap in the RemoteSlave object

2004/06/04 Morgan Christiansson <drftpd@mog.se>
* Verified and updated TestCases.
* Fixed infinite loop in Stats martyr plugin..
* Fixed SITE RELOAD which was broken since
  CommandHandlerBundle refactoring from 2004/06/01
* Added !slave <slavename> command.

2004/06/02 Matthew Zimmerman <zubov@users.sourceforge.net>
* Added UPGRADING.txt, use it!
* Changed default bufferSize to 0 in slaves.conf, if bufferSize is kept 
  at 0, default kernel tcp values are used
* Released 1.1.2

2004/06/01 Morgan Christiansson <drftpd@mog.se>
* Refactored net.sf.drftpd.master.command.CommandHandler to
  org.drftpd.command.CommandHandlerFactory and
  org.drftpd.command.CommandHandler
* Wrote a testcase for stats reset, and fixed reset code.
  Also added a workaround for a Calendar bug in CalendarUtils.
* Fixed bug with MLST/MLSD that caused it to work only for the last logged in user.
  Refactored net.sf.drftpd.master.command.MLST to org.drftpd.command.MLST,
  deprecated stub for backward compatibility is in place for now.
* Changed XStream usermanager to use DomDriver() instead of the default XPP3
  which is an optional download.
* Location which JSX and XStream changed from users/
  to users/jsx/ and users/xstream/ respectively.
* Added org.drftpd.usermanager.ResetMonthlyStats for resetting monthly stats
  and dispatching events to any plugins (such as Trial)
* Changed filelist (LinkedRemoteFile) to be case insensitive.

2004/05/31 Morgan Christiansson <drftpd@mog.se>
* Users hostmask wasn't checked when user wasn't running an
  ident server and wasn't connecting through an ftp-bnc.
  This behaviour was introcued when IDNT support was added.
